force-app/main/default/objects/Quote/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <formula>Maximum_Line_Discount__c &gt; 0.10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>