force-app/main/default/objects/Quote/fields/Commercial_Revision__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Revision__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented automatically when commercial quote line details change.</description>
    <label>Commercial Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>