force-app/main/default/objects/Quote/fields/Discount_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Level__c</fullName>
    <formula>IF(
    Maximum_Line_Discount__c &gt; 0.20,
    &quot;Commercial Director&quot;,
    IF(
        Maximum_Line_Discount__c &gt; 0.10,
        &quot;Sales Manager&quot;,
        &quot;No Approval&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Approval Level</label>
    <type>Text</type>
</CustomField>