force-app/main/default/objects/Quote/fields/Discount_Approver__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>