force-app/main/default/objects/Quote/fields/Maximum_Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Line_Discount__c</fullName>
    <label>Maximum Line Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>