force-app/main/default/objects/Quote/validationRules/VE_Accepted_Requires_Valid_Expiration.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Accepted_Requires_Valid_Expiration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Accepted&quot;),
    OR(
        ISBLANK(ExpirationDate),
        ExpirationDate &lt; TODAY()
    )
)</errorConditionFormula>
    <errorMessage>An accepted quote must have a valid, non-expired Expiration Date.</errorMessage>
</ValidationRule>