force-app/main/default/objects/Quote/validationRules/VE_Customer_Facing_Status_Requires_Appro.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Customer_Facing_Status_Requires_Appro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status, &quot;Presented&quot;),
        ISPICKVAL(Status, &quot;Accepted&quot;)
    ),
    Approval_Required__c,
    NOT(
        ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)
    )
)</errorConditionFormula>
    <errorMessage>A quote requiring discount approval cannot be presented or accepted until it is approved.</errorMessage>
</ValidationRule>